Refactor: Vanilla JS 문법 -> jQuery로 수정

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -129,10 +129,7 @@
         </div>
       </div>
       {% endif %}
-
     </div>
-
-
   </div>
 
 </body>
@@ -232,6 +229,7 @@
 </script>
 <script src="{{ url_for('static', filename = 'script/import/html-to-rtf-browser.min.js') }}"></script>
 <script src="{{ url_for('static', filename = 'script/index.js') }}"></script>
+<script src="{{ url_for('static', filename = 'script/parseText.js') }}"></script>
 <script src="{{ url_for('static', filename = 'script/createcodee.js') }}"></script>
 <script src="{{ url_for('static', filename = 'script/component/menubar.js') }}"></script>
 <script src="{{ url_for('static', filename = 'script/getIndices.js') }}"></script>
