--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -5,8 +5,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=deivce-width, initial-scale=1.0">
+  
+  <link rel="apple-touch-icon" sizes="57x57" href="{{url_for('static', filename='favicon/apple-icon-57x57.png')}}">
+  <link rel="apple-touch-icon" sizes="60x60" href="{{url_for('static', filename='favicon/apple-icon-60x60.png')}}">
+  <link rel="apple-touch-icon" sizes="72x72" href="{{url_for('static', filename='favicon/apple-icon-72x72.png')}}">
+  <link rel="apple-touch-icon" sizes="76x76" href="{{url_for('static', filename='favicon/apple-icon-76x76.png')}}">
+  <link rel="apple-touch-icon" sizes="114x114" href="{{url_for('static', filename='favicon/apple-icon-114x114.png')}}">
+  <link rel="apple-touch-icon" sizes="120x120" href="{{url_for('static', filename='favicon/apple-icon-120x120.png')}}">
+  <link rel="apple-touch-icon" sizes="144x144" href="{{url_for('static', filename='favicon/apple-icon-144x144.png')}}">
+  <link rel="apple-touch-icon" sizes="152x152" href="{{url_for('static', filename='favicon/apple-icon-152x152.png')}}">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{url_for('static', filename='favicon/apple-icon-180x180.png')}}">
+  <link rel="icon" type="image/png" sizes="192x192" href="{{url_for('static', filename='favicon/android-icon-192x192.png')}}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{url_for('static', filename='favicon/favicon-32x32.png')}}">
+  <link rel="icon" type="image/png" sizes="96x96" href="{{url_for('static', filename='favicon/favicon-96x96.png')}}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{url_for('static', filename='favicon/favicon-16x16.png')}}">
+  <link rel="manifest" href="{{url_for('static', filename='favicon/manifest.json')}}">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="{{url_for('static', filename='favicon/ms-icon-144x144.png')}}">
+  <meta name="theme-color" content="#ffffff">
+  
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
-  <link rel="shortcut icon" href="#">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap" rel="stylesheet">
@@ -137,7 +155,7 @@
 
 </body>
 <script>
-  let ref_data = null;
+  let refData = null;
   let treeData = null;
   const owner = "{{ owner }}";
   const repo = "{{ repo }}";
@@ -156,7 +174,7 @@
       $('#code').text(jsonData['reference_file_content']);
       $('#pre').addClass('context-menu-one');
       $('#pre').before(fileName);
-      ref_data = JSON.parse(jsonData['data']);
+      refData = JSON.parse(jsonData['data']);
       
     } else {
       $('#code').text(jsonData['content']);
@@ -203,7 +221,7 @@
     $("#modal_tree_2").jstree(jstreeSetting);
 
     $('#modal_tree_1').on('changed.jstree', function (e, data) {
-    var selectedNode = data.instance.get_node(data.selected[0]);
+    let selectedNode = data.instance.get_node(data.selected[0]);
     if (selectedNode.original.type == "dir"){
       $('#codee_path').val('');
       $('#codee_path').val(selectedNode.id);
@@ -211,7 +229,7 @@
     });
 
     $('#modal_tree_2').on('changed.jstree', function (e, data) {
-    var selectedNode = data.instance.get_node(data.selected[0]);
+    let selectedNode = data.instance.get_node(data.selected[0]);
     if (selectedNode.original.type == "file"){
       $('#ref_path').val('');
       $('#ref_path').val(selectedNode.id);
