--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=deivce-width, initial-scale=1.0">
-  
+
   <link rel="apple-touch-icon" sizes="57x57" href="{{url_for('static', filename='favicon/apple-icon-57x57.png')}}">
   <link rel="apple-touch-icon" sizes="60x60" href="{{url_for('static', filename='favicon/apple-icon-60x60.png')}}">
   <link rel="apple-touch-icon" sizes="72x72" href="{{url_for('static', filename='favicon/apple-icon-72x72.png')}}">
@@ -15,7 +15,8 @@
   <link rel="apple-touch-icon" sizes="144x144" href="{{url_for('static', filename='favicon/apple-icon-144x144.png')}}">
   <link rel="apple-touch-icon" sizes="152x152" href="{{url_for('static', filename='favicon/apple-icon-152x152.png')}}">
   <link rel="apple-touch-icon" sizes="180x180" href="{{url_for('static', filename='favicon/apple-icon-180x180.png')}}">
-  <link rel="icon" type="image/png" sizes="192x192" href="{{url_for('static', filename='favicon/android-icon-192x192.png')}}">
+  <link rel="icon" type="image/png" sizes="192x192"
+    href="{{url_for('static', filename='favicon/android-icon-192x192.png')}}">
   <link rel="icon" type="image/png" sizes="32x32" href="{{url_for('static', filename='favicon/favicon-32x32.png')}}">
   <link rel="icon" type="image/png" sizes="96x96" href="{{url_for('static', filename='favicon/favicon-96x96.png')}}">
   <link rel="icon" type="image/png" sizes="16x16" href="{{url_for('static', filename='favicon/favicon-16x16.png')}}">
@@ -23,12 +24,13 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="{{url_for('static', filename='favicon/ms-icon-144x144.png')}}">
   <meta name="theme-color" content="#ffffff">
-  
+
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-contextmenu/2.7.1/jquery.contextMenu.min.css">
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/jquery-contextmenu/2.7.1/jquery.contextMenu.min.css">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/styles/github.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css" />
   <script src="https://kit.fontawesome.com/16fd5c8b77.js" crossorigin="anonymous"></script>
@@ -37,8 +39,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-contextmenu/2.7.1/jquery.contextMenu.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/highlight.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/languages/go.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlightjs-line-numbers.js/2.8.0/highlightjs-line-numbers.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/jstree.min.js"></script>  
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/highlightjs-line-numbers.js/2.8.0/highlightjs-line-numbers.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/jstree.min.js"></script>
   <script>hljs.highlightAll(); hljs.initLineNumbersOnLoad();</script>
   <title>Codee</title>
 </head>
@@ -61,7 +64,6 @@
   <div class="container center-col">
     <div class="full margin20">
       <span class="filename">{{ content }}</span>
-      <button type="button" class="button right" onclick="updateCodee()">save</button>
     </div>
 
     </h3>
@@ -99,7 +101,7 @@
                     </div>
                   </div>
                   <div class="col-15"> <button class='browse-btn' type='button'
-                      onclick="open_dir('drawer1')">browse</button>
+                      onclick="openDir('drawer1')">browse</button>
                   </div>
 
                 </div>
@@ -114,7 +116,7 @@
                     </div>
                   </div>
                   <div class="col-15"><button class='browse-btn' type='button'
-                      onclick="open_dir('drawer2')">browse</button>
+                      onclick="openDir('drawer2')">browse</button>
                   </div>
                 </div>
                 <div class="create-btn">
@@ -162,10 +164,10 @@
   const repo = "{{ repo }}";
   const ref = "{{ ref }}";
   const content = "{{ content }}";
-  treeData = JSON.parse({{ tree|tojson }});
-  jsonData = JSON.parse({{ file_content|tojson }});
+  treeData = JSON.parse({{ tree| tojson }});
+  jsonData = JSON.parse({{ file_content| tojson }});
 
-  if (content !== ""){
+  if (content !== "") {
     if (isCd(content)) {
       const fileName = $('<div>', {
         id: "filename",
@@ -175,14 +177,14 @@
       $('#code').text(jsonData['reference_file_content']);
       $('#pre').addClass('context-menu-one');
       $('#pre').before(fileName);
-      
+
       refData = JSON.parse(jsonData['data']);
-      
+
     } else {
       $('#code').text(jsonData['content']);
     }
   }
-  
+
 
   $('#tree').on('select_node.jstree', function (e, data) {
     let node = data.node;
@@ -191,7 +193,7 @@
     }
   });
 
-  function isCd(filePath){
+  function isCd(filePath) {
     return filePath.substr(filePath.lastIndexOf(".") + 1) === 'cd';
   }
 
@@ -199,7 +201,7 @@
     console.log(treeData);
     const openedFile = "{{ content }}";
     const jstreeSetting = {
-      plugins : [ "wholerow" ],
+      plugins: ["wholerow"],
       core: {
         themes: {
           responsive: false,
@@ -217,37 +219,37 @@
       core: {
         data: treeData
       }
-    }; 
+    };
     $("#tree").jstree(jstreeSetting);
     $("#modal_tree_1").jstree(jstreeSetting);
     $("#modal_tree_2").jstree(jstreeSetting);
 
     $('#modal_tree_1').on('changed.jstree', function (e, data) {
-    let selectedNode = data.instance.get_node(data.selected[0]);
-    if (selectedNode.original.type == "dir"){
-      $('#codee_path').val('');
-      $('#codee_path').val(selectedNode.id);
-    }
+      let selectedNode = data.instance.get_node(data.selected[0]);
+      if (selectedNode.original.type == "dir") {
+        $('#codee_path').val('');
+        $('#codee_path').val(selectedNode.id);
+      }
     });
 
     $('#modal_tree_2').on('changed.jstree', function (e, data) {
-    let selectedNode = data.instance.get_node(data.selected[0]);
-    if (selectedNode.original.type == "file"){
-      $('#ref_path').val('');
-      $('#ref_path').val(selectedNode.id);
-    }
+      let selectedNode = data.instance.get_node(data.selected[0]);
+      if (selectedNode.original.type == "file") {
+        $('#ref_path').val('');
+        $('#ref_path').val(selectedNode.id);
+      }
     });
 
-    $('#tree').on('ready.jstree', function(e, data) {
+    $('#tree').on('ready.jstree', function (e, data) {
       const parents = $('#tree').jstree(true).get_node(openedFile).parents;
       for (let i = parents.length - 2; i >= 0; i--) {
         $("#tree").jstree('open_node', parents[i], 0);
-      } 
+      }
     });
 
   });
 
-  
+
 
 </script>
 <script src="{{ url_for('static', filename = 'script/import/html-to-rtf-browser.min.js') }}"></script>
@@ -256,4 +258,5 @@
 <script src="{{ url_for('static', filename = 'script/component/menubar.js') }}"></script>
 <script src="{{ url_for('static', filename = 'script/getIndices.js') }}"></script>
 <script src="{{ url_for('static', filename = 'script/editcodee.js') }}"></script>
+
 </html>
