Feat: codee 파일명을 검증하는 코드 추가

--- a/app/templates/main/cd.html
+++ b/app/templates/main/cd.html
@@ -57,7 +57,7 @@
     </div>
   </div>
   <div class="topbar reponame-container">
-    <span class="reponame">{{ owner }} / {{ repo }} ---codee</span>
+    <span class="reponame">{{ owner }} / {{ repo }}</span>
   </div>
 </header>
 
@@ -122,7 +122,7 @@
                   </div>
                 </div>
                 <div class="create-btn">
-                  <button onclick="createCodee()">Create</button>
+                  <button id="create-button">Create</button>
                 </div>
               </form>
 
