--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -120,7 +120,7 @@
                   </div>
                 </div>
                 <div class="create-btn">
-                  <button onclick="createCodee()">Create</button>
+                  <button id="create-button">Create</button>
                 </div>
               </form>
 
