--- a/app/templates/main/root.html
+++ b/app/templates/main/root.html
@@ -53,7 +53,7 @@
         </div>
     </div>
     <div class="topbar reponame-container">
-        <span class="reponame">{{ owner }} / {{ repo }}</span>
+        <span class="reponame">{{ g.owner }} / {{ g.repo }}</span>
     </div>
 </header>
 
@@ -137,8 +137,8 @@
 <script>
     let refData = null;
     let treeData = null;
-    const owner = "{{ owner }}";
-    const repo = "{{ repo }}";
+    const owner = "{{ g.owner }}";
+    const repo = "{{ g.repo }}";
     const ref = "{{ ref }}";
     treeData = JSON.parse({{ tree| tojson }});
 
