--- a/app/templates/main/base.html
+++ b/app/templates/main/base.html
@@ -1,7 +1,7 @@
+<!DOCTYPE html>
 <html>
 
 <head>
-    {% block head %}
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=deivce-width, initial-scale=1.0">
@@ -41,12 +41,46 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/jstree.min.js"></script>
     <title>{% block title %}{% endblock %} - codee</title>
-    {% endblock %}
+    {% block extra_head %}{% endblock %}
 </head>
+<header>
+    <div class="topbar darkbg">
+        <div class="logo-wrapper"><img src="{{url_for('static', filename='logo_white.svg')}}" class="small-logo" alt=""
+                srcset=""></div>
+
+        <div class="logout2 white">
+            <span>{{ current_user.username }} 님,</span>
+            <a href="{{ url_for('auth.logout') }}">logout</a>
+        </div>
+    </div>
+    <div class="topbar reponame-container">
+        <span class="reponame">{{ g.owner }} / {{ g.repo }}</span>
+    </div>
+</header>
 
 <body>
-    {% block body %}
-    {% endblock %}
+    <div class="container center-col">
+        {% block file_path %}
+        {% endblock %}
+        <div class="center-row full">
+            <div class="sidebar col">
+                <div class="filelist border-box scroll">
+                    <div id="tree"></div>
+                </div>
+                <div class="full">
+                    <button class="button modalButton full" data-popup="popupOne">create codee</button>
+                </div>
+                {% include 'main/createcodee.html' %}
+            </div>
+            <div class="box" id='export'>
+                {% block content %}
+                {% endblock %}
+            </div>
+        </div>
+    </div>
+
 </body>
+{% block script %}
+{% endblock %}
 
 </html>
