Refactor: Promise와 setTimeout으로 함수 순차적으로 실행되도록 수정
initLineNumbersOnLoad가 끝나고 rendering 되도록 Promise와 setTimeout으로 함수 순서 지정

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -28,15 +28,18 @@
     const ref = pathArray[3];
     const content = pathArray.slice(4).join('/');
     const openFile = content;
-
-    getFileContent(owner, repo, content).then(fileContent => {
-        $('#code').text(fileContent);
-        hljs.highlightAll();
-        hljs.initLineNumbersOnLoad();
-    }).catch(error => {
-        console.error("Fetch error: " + error);
+    $(async function () {
+        drawTree();
+        spreadTree();
+        getFileContent(owner, repo, content).then(fileContent => {
+            $('#code').text(fileContent);
+            hljs.highlightAll();
+            hljs.initLineNumbersOnLoad();
+        }).catch(error => {
+            console.error("Fetch error: " + error);
+        });
+        $('#filename').text(content);
     });
-    $('#filename').text(content);
 
 </script>
 <script src="{{ url_for('static', filename = 'script/drawtree.js') }}"></script>
