Refactor: Server-side rendering 방식으로 변경
fetch api로 데이터 불러오는 방식에서 Server에서 같이 넘겨주는 방식으로 변경
decoration 관련 변수명 변경

--- a/app/templates/main/base.html
+++ b/app/templates/main/base.html
@@ -54,7 +54,7 @@
         </div>
     </div>
     <div class="topbar reponame-container">
-        <span class="reponame">{{ g.owner }} / {{ g.repo }}</span>
+        <span class="reponame"><span id="owner"></span> / <span id="repo"></span> </span>
     </div>
 </header>
 
